Housekeeping: moved Actuator endpoints to master, forced java 11 release in common modules